crates/dag-macros/tests/ui/workflow_if_then_not_ident.stderr
error: if_! requires `then = <node_alias>`
  --> tests/ui/workflow_if_then_not_ident.rs:41:16
   |
41 |         then = "a",
   |                ^^^
